<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="36.0sp" android:id="@id/countdown" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/countdown" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="24.0sp" android:id="@id/question" android:layout_width="311.0dip" android:layout_height="152.0dip" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip" android:text="@string/question" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.498" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/countdown" app:layout_constraintVertical_bias="0.183" />
    <Button android:id="@id/opt_0" android:layout_width="373.0dip" android:layout_height="52.0dip" android:layout_marginTop="8.0dip" android:text="@string/option_1" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/question" />
    <Button android:id="@id/opt_1" android:layout_width="373.0dip" android:layout_height="52.0dip" android:layout_marginTop="8.0dip" android:text="@string/option_1" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/opt_0" />
    <Button android:id="@id/opt_2" android:layout_width="373.0dip" android:layout_height="52.0dip" android:layout_marginTop="8.0dip" android:text="@string/option_1" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/opt_1" />
    <Button android:id="@id/opt_3" android:layout_width="373.0dip" android:layout_height="52.0dip" android:layout_marginTop="8.0dip" android:text="@string/option_1" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/opt_2" />
</androidx.constraintlayout.widget.ConstraintLayout>